# fgf-ml

./: .gitignore  Makefile  README.md
configs/: tilemaker-config.json  tilemaker-essential.json  tilemaker-process.lua  tileserver.json
configs/tileserver-styles/: buildings.json  common.json
data/: config.json
data/styles/: transportation.json
pipeline/: README.md  distort.py  geom.py  main.py  process.py  pyproject.toml  tilesource.py  transform.py
scripts/: README.md  calc_embeddings.py  fetch_tiles.py  find_tile.py  pyproject.toml
