[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.3",
    "faiss-cpu>=1.13.2",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "noise>=1.2.2",
    "osmium>=4.2.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.2",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length=100
